[package]
name = "xingque"
version = "0.1.0"
authors = ["WANG Xuerui <git@xen0n.name>"]
description = "星雀 - Yet another Python binding to starlark-rs"
license = "Apache-2.0 OR MIT"
edition = "2021"
repository = "https://github.com/xen0n/xingque"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xingque"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.1", features = ["multiple-pymethods"] }
starlark = "0.12.0"
