[package]
name = "xingque"
version = "0.2.1"
authors = ["WANG Xuerui <git@xen0n.name>"]
description = "星雀 - Yet another Python binding to starlark-rs"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/xen0n/xingque"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xingque"
crate-type = ["cdylib"]

[dependencies]
allocative = "0.3.3"
anyhow = "1.0.86"
num-bigint = "0.4.5"
pyo3 = { version = "0.22.0", features = ["abi3", "abi3-py38", "anyhow", "multiple-pymethods", "num-bigint"] }
starlark = "0.12.0"

[patch.crates-io]
allocative = { git = "https://github.com/xen0n/starlark-rust.git", branch = "0.12.0-bump-rustyline" }
starlark = { git = "https://github.com/xen0n/starlark-rust.git", branch = "0.12.0-bump-rustyline" }
