[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "xingque"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3", "pyo3/abi3-py38"]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
